spec/data/mockDefs/invalid/respondTo/mockDefInvalidRespondTo.js
module.exports = function () {
  return {
    respondTo: {},
    endpoint: '/api/hello/:name',
    handledBy: () => {},
  };
};
